@@ -2,6 +2,7 @@ libnss-myhostname (0.3-2) UNRELEASED; urgency=low
 
   * Apply patch by Robert Millan, adding legacy support for BSD and hurd
     kernels (Closes: #630206) 
+  * Use dh-autoreconf to take care of autoreconfing 
 
  -- Joachim Breitner <nomeata@debian.org>  Fri, 17 Jun 2011 09:32:56 +0200
 
